--- a/static/index.html
+++ b/static/index.html
@@ -1,8 +1,12 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styler.css">
+
+    <link rel="stylesheet" href="{% static '/styler.css' %}">
+
     <title>Agenda</title>
   </head>
   <body>
