--- a/static/index.html
+++ b/static/index.html
@@ -17,7 +17,7 @@
       <input type="text" name="Email" placeholder="E-Mail">
       <input type="date" name="Data">
       <textarea name="Coment" placeholder="Comentario"></textarea>
-      <input id="BT" type="button" value="Summit" >
+      <input id="BT" type="button" value="Summits" >
 
     </form>
 
